--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ project(dyno VERSION 1.0.0.0  DESCRIPTION "DynoHook Plugin" HOMEPAGE_URL "https:
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 add_subdirectory(external/dynohook)
 
@@ -36,7 +37,6 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_BINARY_DIR}/exports)
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "dynohook")
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
-        PREFIX ""
         ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/addons/plugify/plugins/dynohook/bin"
         LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/addons/plugify/plugins/dynohook/bin"
         RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/addons/plugify/plugins/dynohook/bin"
@@ -48,7 +48,7 @@ elseif(UNIX)
 	target_link_libraries(${PROJECT_NAME} PRIVATE "-Wl,--version-script,${CMAKE_CURRENT_SOURCE_DIR}/sym/version_script.lds")
 endif()
 
-if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
+if(UNIX AND NOT APPLE)
     target_compile_definitions(${PROJECT_NAME} PUBLIC _GLIBCXX_USE_CXX11_ABI=0)
 endif()
 
