--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ if(POLICY CMP0092)
 endif()
 
 
-project(dyno VERSION 1.0.0.0  DESCRIPTION "DynoHook Plugin" HOMEPAGE_URL "https://github.com/untrustedmodders/dynohook" LANGUAGES CXX)
+project(dyno VERSION 1.0.0.0 DESCRIPTION "DynoHook Plugin" HOMEPAGE_URL "https://github.com/untrustedmodders/dynohook" LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -36,12 +36,6 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_BINARY_DIR}/exports)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "dynohook")
 
-set_target_properties(${PROJECT_NAME} PROPERTIES
-        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/addons/plugify/plugins/dynohook/bin"
-        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/addons/plugify/plugins/dynohook/bin"
-        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/addons/plugify/plugins/dynohook/bin"
-        )
-
 if(APPLE)
 	target_link_libraries(${PROJECT_NAME} PRIVATE "-Wl,-exported_symbols_list,${CMAKE_CURRENT_SOURCE_DIR}/sym/exported_symbols.lds")
 elseif(UNIX)
@@ -52,8 +46,10 @@ if(UNIX AND NOT APPLE)
     target_compile_definitions(${PROJECT_NAME} PUBLIC _GLIBCXX_USE_CXX11_ABI=0)
 endif()
 
-add_custom_command(
-        TARGET ${PROJECT_NAME} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy
-        ${CMAKE_SOURCE_DIR}/dynohook.pplugin ${CMAKE_BINARY_DIR}/addons/plugify/plugins/dynohook/dynohook.pplugin
+set(DYNOHOOK_VERSION "${CMAKE_PROJECT_VERSION}")
+set(DYNOHOOK_PACKAGE "dynohook")
+
+configure_file(
+	${CMAKE_SOURCE_DIR}/dynohook.pplugin.in
+	${CMAKE_BINARY_DIR}/dynohook.pplugin
 )
