Fix path to config

--- a/.github/workflows/cmake-multiple-platform.yml
+++ b/.github/workflows/cmake-multiple-platform.yml
@@ -69,7 +69,7 @@ jobs:
         run: |
           mkdir -p build/output/bin
           cp build/${{env.BUILD_TYPE}}/dynohook.dll build/output/bin
-          cp build/${{env.BUILD_TYPE}}/dynohook.pplugin build/output
+          cp build/dynohook.pplugin build/output
 
       - uses: actions/upload-artifact@v3
         with:
