--- a/.github/workflows/cmake-multiple-platform.yml
+++ b/.github/workflows/cmake-multiple-platform.yml
@@ -32,15 +32,6 @@ jobs:
         shell: bash
         run: echo "GITHUB_SHA_SHORT=${GITHUB_SHA::7}" >> $GITHUB_ENV
 
-      - name: Fallback build number
-        if: ${{ github.event_name == 'pull_request' || github.ref != 'refs/heads/main' }}
-        shell: bash
-        run: echo "BUILD_NUMBER=0" >> $GITHUB_ENV
-
-      - name: Main build number
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        run: echo "BUILD_NUMBER=${{ needs.setup.outputs.buildnumber }}" >> $GITHUB_ENV
-
       - name: Visual Studio environment
         shell: cmd
         run: |
@@ -62,7 +53,7 @@ jobs:
         run: |
           mkdir -p build
           cd build
-          cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DDYNOHOOK_VERSION="${{ env.BUILD_NUMBER }}" -DDYNOHOOK_PACKAGE="dynohook-build-${{ env.BUILD_NUMBER }}-windows-${{ env.GITHUB_SHA_SHORT }}" ..
+          cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DDYNOHOOK_VERSION="${{ needs.setup.outputs.buildnumber }}" -DDYNOHOOK_PACKAGE="dynohook-build-${{ needs.setup.outputs.buildnumber }}-windows-${{ env.GITHUB_SHA_SHORT }}" ..
           cmake --build . --target dyno --config ${{ env.BUILD_TYPE }} -- /m:16
 
       - name: Clean build directory
@@ -84,15 +75,6 @@ jobs:
         shell: bash
         run: echo "GITHUB_SHA_SHORT=${GITHUB_SHA::7}" >> $GITHUB_ENV
 
-      - name: Fallback build number
-        if: ${{ github.event_name == 'pull_request' || github.ref != 'refs/heads/main' }}
-        shell: bash
-        run: echo "BUILD_NUMBER=0" >> $GITHUB_ENV
-
-      - name: Main build number
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        run: echo "BUILD_NUMBER=${{ needs.setup.outputs.buildnumber }}" >> $GITHUB_ENV
-
       - uses: actions/checkout@v3
         with:
           submodules: "recursive"
@@ -101,7 +83,7 @@ jobs:
         run: |
           mkdir -p build
           cd build
-          cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DDYNOHOOK_VERSION="${{ env.BUILD_NUMBER }}" -DDYNOHOOK_PACKAGE="dynohook-build-${{ env.BUILD_NUMBER }}-linux-${{ env.GITHUB_SHA_SHORT }}" ..
+          cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DDYNOHOOK_VERSION="${{ needs.setup.outputs.buildnumber }}" -DDYNOHOOK_PACKAGE="dynohook-build-${{ needs.setup.outputs.buildnumber }}-linux-${{ env.GITHUB_SHA_SHORT }}" ..
           cmake --build . --target dyno --config ${{ env.BUILD_TYPE }} -- -j16
 
       - name: Clean build directory
