--- a/.github/workflows/cmake-multiple-platform.yml
+++ b/.github/workflows/cmake-multiple-platform.yml
@@ -2,9 +2,15 @@ name: Build & Publish
 
 on:
   push:
-    branches: ["main", "dev"]
+    branches:
+      - main
+    paths-ignore:
+    - LICENSE
+    - README.md
   pull_request:
-    branches: ["main", "dev"]
+    paths-ignore:
+    - LICENSE
+    - README.md
 
 env:
   BUILD_TYPE: Release
@@ -103,13 +109,13 @@ jobs:
       contents: write
     needs: ["setup", "build_linux", "build_windows"]
     runs-on: ubuntu-latest
+    outputs:
+      checksum_linux: ${{ steps.linux.outputs.checksum }}
+      checksum_windows: ${{ steps.windows.outputs.checksum }}
     steps:
       - name: Prepare env
         shell: bash
         run: echo "GITHUB_SHA_SHORT=${GITHUB_SHA::7}" >> $GITHUB_ENV
-
-      - name: Main build number
-        run: echo "BUILD_NUMBER=${{ needs.setup.outputs.buildnumber }}" >> $GITHUB_ENV
 
       - uses: actions/download-artifact@v3
         with:
@@ -123,21 +129,123 @@ jobs:
 
       - name: Zip Builds
         run: |
-          (cd build/linux && zip -qq -r ../../dynohook-build-${{ env.BUILD_NUMBER }}-linux-${{ env.GITHUB_SHA_SHORT }}.zip *)
-          (cd build/windows && zip -qq -r ../../dynohook-build-${{ env.BUILD_NUMBER }}-windows-${{ env.GITHUB_SHA_SHORT }}.zip *)
+          (cd build/linux && zip -qq -r ../../dynohook-build-${{ needs.setup.outputs.buildnumber }}-linux-${{ env.GITHUB_SHA_SHORT }}.zip *)
+          (cd build/windows && zip -qq -r ../../dynohook-build-${{ needs.setup.outputs.buildnumber }}-windows-${{ env.GITHUB_SHA_SHORT }}.zip *)
+
+      - id: linux
+        run: echo "checksum=$(sha256sum dynohook-build-${{ needs.setup.outputs.buildnumber }}-linux-${{ env.GITHUB_SHA_SHORT }}.zip | cut -d' ' -f1)" >> $GITHUB_OUTPUT
+      - id: windows
+        run: echo "checksum=$(sha256sum dynohook-build-${{ needs.setup.outputs.buildnumber }}-windows-${{ env.GITHUB_SHA_SHORT }}.zip | cut -d' ' -f1)" >> $GITHUB_OUTPUT
 
       - name: Release
         id: release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ env.BUILD_NUMBER }}
+          tag_name: v${{ needs.setup.outputs.buildnumber }}
           files: |
-            dynohook-build-${{ env.BUILD_NUMBER }}-windows-${{ env.GITHUB_SHA_SHORT }}.zip
-            dynohook-build-${{ env.BUILD_NUMBER }}-linux-${{ env.GITHUB_SHA_SHORT }}.zip
+            dynohook-build-${{ needs.setup.outputs.buildnumber }}-windows-${{ env.GITHUB_SHA_SHORT }}.zip
+            dynohook-build-${{ needs.setup.outputs.buildnumber }}-linux-${{ env.GITHUB_SHA_SHORT }}.zip
 
       - name: Send Notification to Discord
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@0.3.2
         with:
-          args: "A new release of DynoHook has been tagged (v${{ env.BUILD_NUMBER }}) at ${{ steps.release.outputs.url }}"
+          args: "A new release of DynoHook has been tagged (v${{ needs.setup.outputs.buildnumber }}) at ${{ steps.release.outputs.url }}"
+
+  repository:
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    needs: ["setup", "publish"]
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Prepare env
+        shell: bash
+        run: echo "GITHUB_SHA_SHORT=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install packages
+        run: python -m pip install requests
+          
+      - name: Create directory
+        run: mkdir -p build/repo
+
+      - name: Generate file
+        uses: jannekem/run-python-script-action@v1
+        with:
+          script: |
+            import json
+            import requests
+            
+            add_path("build/repo")
+            
+            version_number = ${{ needs.setup.outputs.buildnumber }}
+            package_name = 'dynohook-build-${{ needs.setup.outputs.buildnumber }}-{}-${{ env.GITHUB_SHA_SHORT }}'
+            checksum_linux = '${{ needs.publish.outputs.checksum_linux }}'
+            checksum_windows = '${{ needs.publish.outputs.checksum_windows }}'
+            json_url = 'https://untrustedmodders.github.io/dynohook/dynohook.json'
+            
+            def load_json_from_url(url):
+                try:
+                    response = requests.get(url)
+                    response.raise_for_status()
+                    return response.json()
+                except requests.RequestException:
+                    return {
+                        "content": {
+                            "dynohook": {
+                                "name": "dynohook",
+                                "type": "plugin",
+                                "author": "qubka",
+                                "description": "The x86/x64 API Hooking Library for Windows/Linux which can easily embed it into other programming languages.1",
+                                "versions": []
+                            }
+                        }
+                    }
+            
+            def save_json(file_path, data):
+                with open(file_path, 'w') as file:
+                    json.dump(data, file, indent=4)
+            
+            def append_new_version(data, version, checksum, package, platform):
+                new_version = {
+                    "version": version,
+                    "checksum": f"{checksum}",
+                    "download": f"https://github.com/untrustedmodders/dynohook/releases/download/v{version}/{package.format(platform)}.zip",
+                    "platforms": [f"{platform}"]
+                }
+            
+                versions = data["content"]["dynohook"]["versions"]
+                versions.append(new_version)
+            
+                if len(versions) > 10:
+                    versions = versions[2:]
+            
+                return data
+            
+            data = load_json_from_url(json_url)
+            data = append_new_version(data, version_number, checksum_windows, package_name, "windows")
+            data = append_new_version(data, version_number, checksum_linux, package_name, "linux")
+            save_json('build/repo/dynohook.json', data)
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: build/repo
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
