--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,8 +52,8 @@ endif()
 
 if(LINUX)
     target_compile_definitions(${PROJECT_NAME} PUBLIC _GLIBCXX_USE_CXX11_ABI=0)
-    target_compile_options(${PROJECT_NAME} PUBLIC -stdlib=libc++)
-    target_link_libraries(${PROJECT_NAME} PUBLIC -static-libc++ -static-libgcc)
+    target_compile_options(${PROJECT_NAME} PUBLIC -stdlib=libstdc++)
+    target_link_libraries(${PROJECT_NAME} PUBLIC -static-libstdc++ -static-libgcc)
 endif()
 
 set(DYNOHOOK_VERSION "${CMAKE_PROJECT_VERSION}" CACHE STRING "Set version name")
