--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ if(NOT COMPILER_SUPPORTS_FORMAT)
 endif()
 
 file(READ "${CMAKE_SOURCE_DIR}/version.txt" VERSION_FILE_CONTENTS)
+string(STRIP "${VERSION_FILE_CONTENTS}" VERSION_FILE_CONTENTS)
 set(DYNHOOK_VERSION "${VERSION_FILE_CONTENTS}" CACHE STRING "Set version name")
 set(DYNHOOK_PACKAGE "dynhook" CACHE STRING "Set package name")
 string(REPLACE "v" "" DYNHOOK_VERSION "${DYNHOOK_VERSION}")
