--- a/.github/workflows/cmake-multiple-platform.yml
+++ b/.github/workflows/cmake-multiple-platform.yml
@@ -68,10 +68,11 @@ jobs:
           cmake --build . --target dynh --config ${{ env.BUILD_TYPE }} -- /m
 
       - name: Clean build directory
+        shell: pwsh
         run: |
-          mkdir -p build/output/bin
-          cp build/${{ env.BUILD_TYPE }}/dynhook.dll build/output/bin
-          cp build/dynhook.pplugin build/output
+          New-Item -ItemType Directory -Force -Path build\output\bin
+          Move-Item -Path build\${{ env.BUILD_TYPE }}\dynhook.dll -Destination build\output\bin
+          Move-Item -Path build\dynhook.pmodule -Destination build\output
 
       - uses: actions/upload-artifact@v4
         with:
