--- a/.github/workflows/cmake-multiple-platform.yml
+++ b/.github/workflows/cmake-multiple-platform.yml
@@ -72,7 +72,7 @@ jobs:
         run: |
           New-Item -ItemType Directory -Force -Path build\output\bin
           Move-Item -Path build\${{ env.BUILD_TYPE }}\dynhook.dll -Destination build\output\bin
-          Move-Item -Path build\dynhook.pmodule -Destination build\output
+          Move-Item -Path build\dynhook.pplugin -Destination build\output
 
       - uses: actions/upload-artifact@v4
         with:
