--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,22 @@ if(POLICY CMP0092)
 endif()
 
 
-project(dynh VERSION 1.0.0.0 DESCRIPTION "DynHook Plugin" HOMEPAGE_URL "https://github.com/untrustedmodders/dynhook" LANGUAGES CXX)
+file(READ "${CMAKE_CURRENT_SOURCE_DIR}/version.txt" VERSION_FILE_CONTENTS)
+string(STRIP "${VERSION_FILE_CONTENTS}" VERSION_FILE_CONTENTS)
+set(DYNHOOK_VERSION "${VERSION_FILE_CONTENTS}" CACHE STRING "Set version name")
+set(DYNHOOK_PACKAGE "dynhook" CACHE STRING "Set package name")
+string(REPLACE "v" "" DYNHOOK_VERSION "${DYNHOOK_VERSION}")
+string(REGEX REPLACE "[.+-]" ";" DYNHOOK_VERSION_LIST ${DYNHOOK_VERSION})
+list(GET DYNHOOK_VERSION_LIST 0 DYNHOOK_VERSION_MAJOR)
+list(GET DYNHOOK_VERSION_LIST 1 DYNHOOK_VERSION_MINOR)
+list(GET DYNHOOK_VERSION_LIST 2 DYNHOOK_VERSION_PATCH)
+
+project(dynh 
+        VERSION "${DYNHOOK_VERSION_MAJOR}.${DYNHOOK_VERSION_MINOR}.${DYNHOOK_VERSION_PATCH}"
+        DESCRIPTION "DynHook Plugin" 
+        HOMEPAGE_URL "https://github.com/untrustedmodders/dynhook" 
+        LANGUAGES CXX
+)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -59,7 +74,6 @@ elseif(UNIX)
 endif()
 
 if(LINUX)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE _GLIBCXX_USE_CXX11_ABI=0)
     target_link_libraries(${PROJECT_NAME} PRIVATE -static-libstdc++ -static-libgcc)
 endif()
 
@@ -69,13 +83,6 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE
 if(NOT COMPILER_SUPPORTS_FORMAT)
     target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt-header-only)
 endif()
-
-file(READ "${CMAKE_CURRENT_SOURCE_DIR}/version.txt" VERSION_FILE_CONTENTS)
-string(STRIP "${VERSION_FILE_CONTENTS}" VERSION_FILE_CONTENTS)
-set(DYNHOOK_VERSION "${VERSION_FILE_CONTENTS}" CACHE STRING "Set version name")
-set(DYNHOOK_PACKAGE "dynhook" CACHE STRING "Set package name")
-string(REPLACE "v" "" DYNHOOK_VERSION "${DYNHOOK_VERSION}")
-
 
 configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/dynhook.pplugin.in
